kubernetes/app/todos.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos
  labels:
    app.kubernetes.io/name: todos
    todosapp.tier: backend # Extra annotacio; nem hasznaljuk a pod azonositasahoz
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http # A kontener definicio portjara hivatkozik
      name: http # A service-en ezen neven lesz elerheto a port
  selector:
    app.kubernetes.io/name: todos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos
  labels:
    app.kubernetes.io/name: todos
    todosapp.tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: todos
  template:
    metadata:
      labels:
        app.kubernetes.io/name: todos
        todosapp.tier: backend
    spec:
      containers:
        - name: todos
          image: todoapp/todos:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /health/live
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todos
  labels:
    app.kubernetes.io/name: todos
    todosapp.tier: backend
  annotations:
    # Forward authentikacio beallitasa annotaciokkal https://docs.traefik.io/v1.7/configuration/backends/kubernetes/#authentication
    traefik.ingress.kubernetes.io/auth-url: http://users/api/auth
    traefik.ingress.kubernetes.io/auth-response-headers: Authorization
    traefik.ingress.kubernetes.io/auth-type: forward
spec:
  rules:
    - http:
        paths:
          - path: /api/todos
            pathType: Prefix
            backend:
              service:
                name: todos # A service neve
                port:
                  name: http # A service-ben a port neve (lehet a port szama is number nevvel)
