kubernetes/app/users.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    app.kubernetes.io/name: users
    todosapp.tier: backend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: users
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app.kubernetes.io/name: users
    todosapp.tier: backend
spec:
  replicas: 2 # Skalazzuk a backend ezen reszet
  selector:
    matchLabels:
      app.kubernetes.io/name: users
  template:
    metadata:
      labels:
        app.kubernetes.io/name: users
        todosapp.tier: backend
    spec:
      containers:
        - name: users
          image: todoapp/users:v1
          ports:
            - name: http
              containerPort: 80
      restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: users-api
  labels:
    app.kubernetes.io/name: users-api
    todosapp.tier: backend
  annotations:
    # Forward authentikacio beallitasa annotaciokkal https://docs.traefik.io/v1.7/configuration/backends/kubernetes/#authentication
    traefik.ingress.kubernetes.io/auth-url: http://users/api/auth
    traefik.ingress.kubernetes.io/auth-response-headers: Authorization
    traefik.ingress.kubernetes.io/auth-type: forward
spec:
  rules:
    - http:
        paths:
          - path: /api/users
            backend:
              serviceName: users
              servicePort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: users-auth
  labels:
    app.kubernetes.io/name: users-auth
    todosapp.tier: backend
    # Ezt a vegpontot nem kell authentikalni
spec:
  rules:
    - http:
        paths:
          - path: /api/auth
            backend:
              serviceName: users
              servicePort: http
